--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -22,25 +22,25 @@
     <div class="Horizontal">
         <div class="column">
             <h1>Actividades HTML</h1>
-            <a href="2formato/">Formato</a>
-            <a href="3hipervinculos/">Hipervínculo</a>
-            <a href="4listas/">Listas</a>
-            <a href="5imagenes/">Imagenes</a>
-            <a href="6tablas/">Tablas</a>
-            <a href="7formularios/">Formularios</a>
-            <a href="8multimedia/">Multimedia</a>
-            <a href="9contenido/">Contenido</a>
-            <a href="11interactivo/">Interactivo</a>
+            <a href="../2formato/">Formato</a>
+            <a href="../3hipervinculos/">Hipervínculo</a>
+            <a href="../4listas/">Listas</a>
+            <a href="../5imagenes/">Imagenes</a>
+            <a href="../6tablas/">Tablas</a>
+            <a href="../7formularios/">Formularios</a>
+            <a href="../8multimedia/">Multimedia</a>
+            <a href="../9contenido/">Contenido</a>
+            <a href="../11interactivo/">Interactivo</a>
         </div>
         <div class="column">
             <H1>Actividades CSS</H1>
-            <a href="3selectores/">Selectores</a>
-            <a href="4color/">Color</a>
-            <a href="5texto/">Texto</a>
-            <a href="6medidas/">Medidas</a>
-            <a href="7imagenes/">Imagenes</a>
-            <a href="8display/">Display</a>
-            <a href="9margen/">Margen</a>
+            <a href="../3selectores/">Selectores</a>
+            <a href="../4color/">Color</a>
+            <a href="../5texto/">Texto</a>
+            <a href="../6medidas/">Medidas</a>
+            <a href="../7imagenes/">Imagenes</a>
+            <a href="../8display/">Display</a>
+            <a href="../9margen/">Margen</a>
         </div>
     </div>
     </main>
