--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -23,79 +23,79 @@
         <div class="column">
             <h1>Actividades HTML</h1>
             <h3>Formato</h3>
-            <a href="../2formato/actividad1.html">Actividad</a>
-            <a href="../2formato/actividad2.html">Actividad</a>
-            <a href="../2formato/actividad3.html">Actividad</a>
-            <a href="../2formato/actividad4.html">Actividad</a>
-            <a href="../2formato/actividad5.html">Actividad</a>
-            <a href="../2formato/actividad6.html">Actividad</a>
-            <a href="../2formato/actividad7.html">Actividad</a>
+            <a href="../2formato/actividad1.html">Actividad1</a>
+            <a href="../2formato/actividad2.html">Actividad2</a>
+            <a href="../2formato/actividad3.html">Actividad3</a>
+            <a href="../2formato/actividad4.html">Actividad4</a>
+            <a href="../2formato/actividad5.html">Actividad5</a>
+            <a href="../2formato/actividad6.html">Actividad6</a>
+            <a href="../2formato/actividad7.html">Actividad7</a>
             <h3>Hipervinculos</h3>
-            <a href="../3hipervinculos/actividad1.html">Actividad</a>
-            <a href="../3hipervinculos/actividad2.html">Actividad</a>
-            <a href="../3hipervinculos/actividad3.html">Actividad</a>
+            <a href="../3hipervinculos/actividad1.html">Actividad1</a>
+            <a href="../3hipervinculos/actividad2.html">Actividad2</a>
+            <a href="../3hipervinculos/actividad3.html">Actividad3</a>
             <h3>Listas</h3>
-            <a href="../4listas/actividad1.html">Actividad</a>
-            <a href="../4listas/actividad2.html">Actividad</a>
-            <a href="../4listas/actividad3.html">Actividad</a>
-            <a href="../4listas/actividad4.html">Actividad</a>
-            <a href="../4listas/actividad5.html">Actividad</a>
+            <a href="../4listas/actividad1.html">Actividad1</a>
+            <a href="../4listas/actividad2.html">Actividad2</a>
+            <a href="../4listas/actividad3.html">Actividad3</a>
+            <a href="../4listas/actividad4.html">Actividad4</a>
+            <a href="../4listas/actividad5.html">Actividad5</a>
             <h3>Imagenes</h3>
-            <a href="../5imagenes/actividad1.html">Actividad</a>
-            <a href="../5imagenes/actividad2.html">Actividad</a>
-            <a href="../5imagenes/actividad3.html">Actividad</a>
-            <a href="../5imagenes/actividad4.html">Actividad</a>
+            <a href="../5imagenes/actividad1.html">Actividad1</a>
+            <a href="../5imagenes/actividad2.html">Actividad2</a>
+            <a href="../5imagenes/actividad3.html">Actividad3</a>
+            <a href="../5imagenes/actividad4.html">Actividad4/a>
             <h3>Tablas</h3>
-            <a href="../6tablas/actividad1.html">Actividad</a>
-            <a href="../6tablas/actividad2.html">Actividad</a>
-            <a href="../6tablas/actividad3.html">Actividad</a>
+            <a href="../6tablas/actividad1.html">Actividad1</a>
+            <a href="../6tablas/actividad2.html">Actividad2</a>
+            <a href="../6tablas/actividad3.html">Actividad3</a>
             <h3>Formularios</h3>
-            <a href="../7Formularios/actividad1.html">Actividad</a>
-            <a href="../7Formularios/actividad2.html">Actividad</a>
-            <a href="../7Formularios/actividad3.html">Actividad</a>
-            <a href="../7Formularios/actividad4.html">Actividad</a>
+            <a href="../7Formularios/actividad1.html">Actividad1</a>
+            <a href="../7Formularios/actividad2.html">Actividad2</a>
+            <a href="../7Formularios/actividad3.html">Actividad3</a>
+            <a href="../7Formularios/actividad4.html">Actividad4</a>
             <h3>Multimedia</h3>
-            <a href="../8multimedia/actividad1.html">Actividad</a>
-            <a href="../8multimedia/actividad2.html">Actividad</a>
+            <a href="../8multimedia/actividad1.html">Actividad1</a>
+            <a href="../8multimedia/actividad2.html">Actividad2</a>
             <h3>Contenido</h3>
-            <a href="../9contenido/actividad1.html">Actividad</a>
-            <a href="../9contenido/actividad2.html">Actividad</a>
-            <a href="../9contenido/actividad3.html">Actividad</a>
+            <a href="../9contenido/actividad1.html">Actividad1</a>
+            <a href="../9contenido/actividad2.html">Actividad2</a>
+            <a href="../9contenido/actividad3.html">Actividad3</a>
             <h3>Interactivo</h3>
-            <a href="../11Interactivo/actividad1.html">Actividad</a>
-            <a href="../11Interactivo/actividad2.html">Actividad</a>
+            <a href="../11Interactivo/actividad1.html">Actividad1</a>
+            <a href="../11Interactivo/actividad2.html">Actividad2</a>
         </div>
         <div class="column">
             <H1>Actividades CSS</H1>
             <h3>Selectores</h3>
-            <a href="../3selectores/actividad1.html">Actividad</a>
-            <a href="../3selectores/actividad2.html">Actividad</a>
+            <a href="../3selectores/actividad1.html">Actividad1</a>
+            <a href="../3selectores/actividad2.html">Actividad2</a>
             <h3>Color</h3>
-            <a href="../4color/actividad1.html">Actividad</a>
-            <a href="../4color/actividad2.css">Actividad</a>
-            <a href="../4color/actividad3.html">Actividad</a>
+            <a href="../4color/actividad1.html">Actividad1</a>
+            <a href="../4color/actividad2.css">Actividad2</a>
+            <a href="../4color/actividad3.html">Actividad3</a>
             <h3>Texto</h3>
-            <a href="../5texto/actividad1.html">Actividad</a>
-            <a href="../5texto/actividad2.html">Actividad</a>
-            <a href="../5texto/actividad3.html">Actividad</a>
-            <a href="../5texto/actividad4.html">Actividad</a>
-            <a href="../5texto/actividad5.html">Actividad</a>
+            <a href="../5texto/actividad1.html">Actividad1</a>
+            <a href="../5texto/actividad2.html">Actividad2</a>
+            <a href="../5texto/actividad3.html">Actividad3</a>
+            <a href="../5texto/actividad4.html">Actividad4</a>
+            <a href="../5texto/actividad5.html">Actividad5</a>
             <h3>Medidas</h3>
-            <a href="../6medidas/actividad1.html">Actividad</a>
-            <a href="../6medidas/actividad2.html">Actividad</a>
-            <a href="../6medidas/actividad3.html">Actividad</a>
-            <a href="../6medidas/actividad4.html">Actividad</a>
+            <a href="../6medidas/actividad1.html">Actividad1</a>
+            <a href="../6medidas/actividad2.html">Actividad2</a>
+            <a href="../6medidas/actividad3.html">Actividad3</a>
+            <a href="../6medidas/actividad4.html">Actividad4</a>
             <h3>Imagenes</h3>
-            <a href="../7imagenes/actividad1.html">Actividad</a>
-            <a href="../7imagenes/actividad2.html">Actividad</a>
+            <a href="../7imagenes/actividad1.html">Actividad1</a>
+            <a href="../7imagenes/actividad2.html">Actividad2</a>
             <h3>Display</h3>
-            <a href="../8display/actividad1.html">Actividad</a>
-            <a href="../8display/actividad2.html">Actividad</a>
-            <a href="../8display/actividad3.html">Actividad</a>
+            <a href="../8display/actividad1.html">Actividad1</a>
+            <a href="../8display/actividad2.html">Actividad2</a>
+            <a href="../8display/actividad3.html">Actividad3</a>
             <h3>Margen</h3>
-            <a href="../9margen/actividad1.html">Actividad</a>
-            <a href="../9margen/actividad2.html">Actividad</a>
-            <a href="../9margen/actividad3.html">Actividad</a>
+            <a href="../9margen/actividad1.html">Actividad1</a>
+            <a href="../9margen/actividad2.html">Actividad2</a>
+            <a href="../9margen/actividad3.html">Actividad3</a>
         </div>
     </div>
     </main>
