--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -44,7 +44,7 @@
             <a href="../5imagenes/actividad1.html">Actividad1</a>
             <a href="../5imagenes/actividad2.html">Actividad2</a>
             <a href="../5imagenes/actividad3.html">Actividad3</a>
-            <a href="../5imagenes/actividad4.html">Actividad4/a>
+            <a href="../5imagenes/actividad4.html">Actividad4</a>
             <h3>Tablas</h3>
             <a href="../6tablas/actividad1.html">Actividad1</a>
             <a href="../6tablas/actividad2.html">Actividad2</a>
