--- a/3selectores/Actividad1.html
+++ b/3selectores/Actividad1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/3.-Selectores/Actividad1.css">
+    <link rel="stylesheet" type="text/css" href="/3.-Selectores/actividad1.css">
 </head>
 <body>
     <ul>
