--- a/7imagenes/Actividad2.html
+++ b/7imagenes/Actividad2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/7.-imagenes/Actividad2.css">
+    <link rel="stylesheet" type="text/css" href="/7.-imagenes/actividad2.css">
 </head>
 <body>
     <div class="lading">
