--- a/8display/Actividad1.html
+++ b/8display/Actividad1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/8.-display/Actividad1.css">
+    <link rel="stylesheet" type="text/css" href="/8.-display/actividad1.css">
 </head>
 <body>
     <p class="display1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
