--- a/5texto/Actividad5.html
+++ b/5texto/Actividad5.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/5.-Texto/actividad5.css">
+    <link rel="stylesheet" type="text/css" href="5.-Texto/actividad5.css">
 </head>
 <body>
     <p>Aquellas cacerías, sin embargo, acababan muchas veces en tragedia. Fue en uno de esos lances, por ejemplo, donde el enigmático protagonista de esta novela, el capitán Ahab, <span>perdió una pierna</span>, la sustituyó por otra de marfil y concibió un odio mortal hacia aquella colosal ballena blanca y solitaria que sembraba el terror por mares sin civilizar.</p>
