--- a/9margen/Actividad2.html
+++ b/9margen/Actividad2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/9.-Margen/actividad2.css">
+    <link rel="stylesheet" type="text/css" href="9.-Margen/actividad2.css">
 </head>
 <body>
     <p class="center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan augue tellus, eu sodales urna fringilla id. Vestibulum quis nunc quis orci vulputate pretium vitae ut orci. Integer sollicitudin ipsum venenatis urna fermentum laoreet eget ut metus. Phasellus placerat magna sit amet mauris dignissim fringilla. Mauris porttitor pellentesque risus non sollicitudin. Proin cursus nisl in elementum venenatis. Cras mi tortor, mollis a laoreet et, porta id nunc.</p>
