--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -72,7 +72,7 @@
             <a href="../3selectores/actividad2.html">Actividad2</a>
             <h3>Color</h3>
             <a href="../4color/actividad1.html">Actividad1</a>
-            <a href="../4color/actividad2.css">Actividad2</a>
+            <a href="../4color/actividad2.html">Actividad2</a>
             <a href="../4color/actividad3.html">Actividad3</a>
             <h3>Texto</h3>
             <a href="../5texto/actividad1.html">Actividad1</a>
