--- a/6medidas/Actividad1.html
+++ b/6medidas/Actividad1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="6.-Medidas/actividad1.css">
+    <link rel="stylesheet" type="text/css" href="6medidas/actividad1.css">
 </head>
 <body>
     <h1 class="titulo">Lavadora dual</h1>
