--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -23,7 +23,7 @@
         <div class="column">
             <h1>Actividades HTML</h1>
             <h3>Formato</h3>
-            <a href="../2formato/actividad1.html">Actividad1</a>
+            <a href="..2formato/actividad1.html">Actividad1</a>
             <a href="../2formato/actividad2.html">Actividad2</a>
             <a href="../2formato/actividad3.html">Actividad3</a>
             <a href="../2formato/actividad4.html">Actividad4</a>
@@ -71,7 +71,7 @@
             <a href="../3selectores/actividad1.html">Actividad1</a>
             <a href="../3selectores/actividad2.html">Actividad2</a>
             <h3>Color</h3>
-            <a href="../4color/actividad1.html">Actividad1</a>
+            <a href="..4color/actividad1.html">Actividad1</a>
             <a href="../4color/actividad2.html">Actividad2</a>
             <a href="../4color/actividad3.html">Actividad3</a>
             <h3>Texto</h3>
