--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -23,7 +23,7 @@
         <div class="column">
             <h1>Actividades HTML</h1>
             <h3>Formato</h3>
-            <a href="..2formato/actividad1.html">Actividad1</a>
+            <a href="../2formato/actividad1.html">Actividad1</a>
             <a href="../2formato/actividad2.html">Actividad2</a>
             <a href="../2formato/actividad3.html">Actividad3</a>
             <a href="../2formato/actividad4.html">Actividad4</a>
@@ -50,10 +50,10 @@
             <a href="../6tablas/actividad2.html">Actividad2</a>
             <a href="../6tablas/actividad3.html">Actividad3</a>
             <h3>Formularios</h3>
-            <a href="../7Formularios/actividad1.html">Actividad1</a>
-            <a href="../7Formularios/actividad2.html">Actividad2</a>
-            <a href="../7Formularios/actividad3.html">Actividad3</a>
-            <a href="../7Formularios/actividad4.html">Actividad4</a>
+            <a href="../7formularios/actividad1.html">Actividad1</a>
+            <a href="../7formularios/actividad2.html">Actividad2</a>
+            <a href="../7formularios/actividad3.html">Actividad3</a>
+            <a href="../7formularios/actividad4.html">Actividad4</a>
             <h3>Multimedia</h3>
             <a href="../8multimedia/actividad1.html">Actividad1</a>
             <a href="../8multimedia/actividad2.html">Actividad2</a>
@@ -71,7 +71,7 @@
             <a href="../3selectores/actividad1.html">Actividad1</a>
             <a href="../3selectores/actividad2.html">Actividad2</a>
             <h3>Color</h3>
-            <a href="..4color/actividad1.html">Actividad1</a>
+            <a href="../4color/actividad1.html">Actividad1</a>
             <a href="../4color/actividad2.html">Actividad2</a>
             <a href="../4color/actividad3.html">Actividad3</a>
             <h3>Texto</h3>
