--- a/9contenido/actividad3.html
+++ b/9contenido/actividad3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="/9.-Contenido/Actividad2.html">Volver a la pagina anterior</a>
+        <a href="9.-Contenido/Actividad2.html">Volver a la pagina anterior</a>
     </header>
     <main>
         <label>
