--- a/9contenido/actividad2.html
+++ b/9contenido/actividad2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/9.-Contenido/Actividad3.html">Segunda pagina</a>
+    <a href="9.-Contenido/Actividad3.html">Segunda pagina</a>
     <header>
         <h1>
             Discos de Jazz
