--- a/7imagenes/actividad1.html
+++ b/7imagenes/actividad1.html
@@ -11,7 +11,7 @@
     <div class="chat">
         <div class="mensaje enviado">
             <div class="avatar">
-                <img src="Imagenes/v_trevor_256.jpg" alt="Avatar1">
+                <img src="imagenes/v_trevor_256.jpg" alt="Avatar1">
             </div>
             <div class="interior">
                 <div class="info">
@@ -26,7 +26,7 @@
 
             <div class="mensaje recibido">
                 <div class="avatar">
-                    <img src="Imagenes/v_michael_256.jpg" alt="Avatar2">
+                    <img src="imagenes/v_michael_256.jpg" alt="Avatar2">
                 </div>
                 <div class="interior">
                     <div class="info">
