--- a/6medidas/actividad1.html
+++ b/6medidas/actividad1.html
@@ -11,7 +11,7 @@
     <h1 class="titulo">Lavadora dual</h1>
     <h2 class="subtitulo">Agitador y apertura superior</h2>
     <div class="container">
-    <img src="/Imagenes/lavadora.jpg" height="300" width="200">
+    <img src="imagenes/lavadora.jpg" height="300" width="200">
     <p>Model: NTW4516FW</p>
     <p>SKU: 5369600</p>
     <p>494,99 euros</p>
