--- a/11Interactivo/actividad1.html
+++ b/11Interactivo/actividad1.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <h1>Museo del Prado</h1>
-    <img src="Imagenes/la rendicion de breda.jpeg" alt="La rendición de Breda">
+    <img src="imagenes/la rendicion de breda.jpeg" alt="La rendición de Breda">
     <ul>
         <label>
         <li>
