--- a/4color/actividad2.html
+++ b/4color/actividad2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="4color/actividad2.css">
+    <link rel="stylesheet" type="text/css" href="actividad2.css">
 </head>
 <body>
     <p>Soy <span>Juan Pérez</span>, nacido el <span> de mayo de 1985</span> en <span>Madrid</span> Me encanta viajar y descubrir nuevas culturas. En mi tiempo libre, disfruto de <span>la lectura</span> y practico deportes como el <span>tenis</span> y el <span>senderismo</span>. Actualmente, resido en <span>Barcelona</span> junto a <span>mi esposa</span> y <span>mis dos hijos</span>.</p>
