--- a/6medidas/actividad2.html
+++ b/6medidas/actividad2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="6medidas/actividad2.css">
+    <link rel="stylesheet" type="text/css" href="actividad2.css">
 </head>
 <body>
         <p class="escalon1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sapien sapien, pretium in quam sed, feugiat condimentum orci. Curabitur ac est lacus. Etiam posuere tellus velit, sed hendrerit ex volutpat non. Nullam est dolor, facilisis quis tincidunt ut, malesuada quis.</p>
